pushed starter pack

--- a/public/assets/styles/framework.css
+++ b/public/assets/styles/framework.css
@@ -4801,7 +4801,6 @@ input[type=range]::-webkit-slider-thumb:after {
 .pricing-2,
 .pricing-3,
 .pricing-4 {
-    max-width: 300px;
     margin: 0 auto;
     border-radius: 20px;
     overflow: hidden
@@ -4860,7 +4859,6 @@ input[type=range]::-webkit-slider-thumb:after {
 }
 
 .pricing-1 .pricing-list li {
-    line-height: 40px;
     border-bottom: solid 1px rgba(0, 0, 0, .1);
     font-size: 14px;
     font-weight: 500
@@ -5011,7 +5009,7 @@ input[type=range]::-webkit-slider-thumb:after {
 }
 
 .pricing-4 .pricing-value {
-    font-size: 43px;
+    font-size: 40px;
     padding: 30px 0 20px
 }
 
@@ -5035,15 +5033,15 @@ input[type=range]::-webkit-slider-thumb:after {
 }
 
 .pricing-4 .pricing-list {
-    padding: 0;
+    padding: 0px 20px;
     margin-bottom: 20px
 }
 
 .pricing-4 .pricing-list li {
-    line-height: 40px;
     border-bottom: solid 1px rgba(0, 0, 0, .07);
-    font-size: 14px;
-    font-weight: 500
+    font-size: 12px;
+    font-weight: 700;
+    color: #000;
 }
 
 .pricing-4 .pricing-list li:last-child {
